--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
